# amazing-async-dev

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
cli/: asyncdev.py  starter_pack_consumer.py
docs/: architecture.md  archive-aware-planning.md  archive-query.md  async-decision-channel.md  batch-operations.md  contract-validation-report.md  daily-management.md  decision-templates.md  doctor.md  execution-policy.md  governance-migration.md  operating-model.md  quick-start.md  real-asyncdev-consumption-pilot.md  terminology.md  verify.md  vision.md  workflow-feedback.md
examples/: README.md  doctor-output.md  snapshot-output.md
runtime/: __init__.py  acceptance_console.py  acceptance_gating.py  acceptance_pack_builder.py  acceptance_readiness.py  acceptance_recovery.py  acceptance_recovery_adapter.py  acceptance_runner.py  api_failure_types.py  archive_pack_builder.py  archive_query.py  artifact_router.py  audit_trail_store.py  auto_day_end_email.py  auto_email_trigger.py  browser_verification_orchestrator.py  browser_verifier.py  channel_adapter.py  continuation_evaluator.py  continuation_types.py  decision_request_store.py  decision_sync.py  decision_templates.py  decision_waiting_session.py  dev_server_manager.py  email_escalation_policy.py  email_failure_handler.py  email_sender.py  evidence_rollup.py  execution_event_types.py  execution_logger.py  execution_observer.py  execution_policy.py  external_closeout_state.py  external_execution_closeout.py  feedback_promotion_store.py  frontend_recipe_state.py  frontend_verification_recipe.py  (+35 more)
(+309 files in other folders)
